--- a/github-app/package.json
+++ b/github-app/package.json
@@ -16,6 +16,7 @@
     "webpack-validator": "^3.0.1"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "react": "15.4",
     "react-dom": "15.4"
   },
